--- a/source/content.css
+++ b/source/content.css
@@ -1,35 +1,34 @@
 .ytp-back-to-comment-button {
-	color: #fff;
-	padding: 10px;
-	opacity: 90%;
-	position: absolute;
-	bottom: 62px;
-	top: auto;
-	font-size: 109% !important;
-	left: 50%;
-	transform: translateX(-50%);
+  opacity: 90%;
+  position: absolute;
+  bottom: 62px;
+  top: auto;
+  font-size: 111% !important;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .ytp-back-to-comment-button:hover {
-	opacity: 100%;
+  opacity: 100%;
 }
 
 ytd-comment-renderer {
-	transition: background-color 1s ease;
+  transition: background-color 1s ease;
 }
 
 ytd-comment-renderer.highlight {
-	background-color: #e8ecf4;
+  background-color: #e8ecf4;
 }
 
 html[dark] ytd-comment-renderer.highlight {
-	background-color: #272924;
+  background-color: #272924;
 }
 
+.ad-showing .ytp-back-to-comment-button,
 .ytp-big-mode .ytp-back-to-comment-button.is-safari {
   opacity: 0;
 }
 
 .ytp-big-mode .ytp-back-to-comment-button {
-	bottom: 70px;
+  bottom: 70px;
 }
